# franka_bimanual_controllers

./: .gitignore  CMakeLists.txt  README.md  package.xml  setup_gazebo.py
cfg/: dual_arm_compliance_param.cfg
config/: default_combined_controllers.yaml  franka_bimanual_controllers.yaml  franka_combined_control_node.yaml  teleop_joint_pd_example_control_node.yaml
description/: dual_panda_example.urdf.xacro
end_effector_data/: end_effector_black.json  end_effector_white.json
gazebo/: dual_gazebo.launch  panda.launch
gazebo/config/: sim_controllers.yaml
include/franka_bimanual_controllers/: bimanual_cartesian_impedance_controller.h  pseudo_inversion.h
launch/: dual_arm_cartesian_impedance_example_controller.launch  dual_gazebo.launch  franka_combined_control.launch  franka_gripper.launch  panda.launch
launch/rviz/: franka_dual_description_with_marker.rviz
python/: CMakeLists.txt  Learning_from_demonstration.py  dual_panda.py  dual_panda_threds.py  dual_server.py  franka_bimanual_teaching.xml  main.py  package.xml  panda.py
python/cfg/: bimanual.cfg  dualteaching.cfg
src/: bi_manual_teleoperation.cpp  bilateral_control.cpp  bimanual_cartesian_impedance_controller.cpp  franka_bimanual_gripper_online.cpp  read_position_bimanual.cpp
